fix z-index

--- a/src/index.css
+++ b/src/index.css
@@ -325,7 +325,7 @@ ul.nav, .nav ul{list-style:none;padding:0;margin:0;}
 	.nav ul ul{left:100%;top:0;}
 
 /* modal */
-.dlg{z-index:100;position:fixed;top:50%;left:50%;transform:translate(-50%, -50%);background-clip:padding-box;min-width:16em;max-width:70%;max-height:80vh;overflow:auto;/*box-sizing:content-box;*/}
+.dlg{z-index:120;position:fixed;top:50%;left:50%;transform:translate(-50%, -50%);background-clip:padding-box;min-width:16em;max-width:70%;max-height:80vh;overflow:auto;/*box-sizing:content-box;*/}
 	.full{width:100%;max-width:100%;min-height:100vh;box-sizing:border-box;}
 	.dlg.let{width:70%;}
 	.dlg.full{height:100vh;transform:none;top:0;left:0;}
@@ -337,9 +337,9 @@ ul.nav, .nav ul{list-style:none;padding:0;margin:0;}
 .drawer.shift[id]{left:auto;right:0;transition-property:right;}
 .drawer.shift:not(:target):not([class*="toggle"]), .drawer.shift.off{right:-21em;}/*hide*/
 /* gallery */
-.gal a:target{z-index:90;color:#fff;background:#000 50% 50% / contain no-repeat;background-image:var(--img);position:fixed;left:0;top:0;width:100%;height:100vh;box-shadow:inset 0 3em 3em -1.5em rgba(0,0,0,.3);border-bottom:10em solid #000;outline:none;} /* current */
+.gal a:target{z-index:110;color:#fff;background:#000 50% 50% / contain no-repeat;background-image:var(--img);position:fixed;left:0;top:0;width:100%;height:100vh;box-shadow:inset 0 3em 3em -1.5em rgba(0,0,0,.3);border-bottom:10em solid #000;outline:none;} /* current */
 	.gal a:target+a{background-image:var(--img);background-position:999em 999em;} /* preload next */
-	.gal a:not([id]), .gal a:after{z-index:91;position:fixed;top:0;color:#fff;padding:0 calc(var(--gap-n) / 2);}
+	.gal a:not([id]), .gal a:after{z-index:111;position:fixed;top:0;color:#fff;padding:0 calc(var(--gap-n) / 2);}
 	.gal a[data-caption]:after{content:attr(data-caption);left:0;display:block;}
 	.gal a:not([id]){right:0;}
 /* topbar */
@@ -543,7 +543,7 @@ mark{background-color:var(--bg-warning);}
 	.js.fade .dlg{border:none;border-radius:0;}
 	.js.fade .dlg.rad{border-radius:var(--radius);}
 	.js:after{opacity:0;content:"";position:fixed;top:0;left:0;width:100%;height:100vh;background:rgba(100,100,100,.5);z-index:-1;}
-	.js.fade:after{opacity:1;z-index:99;}
+	.js.fade:after{opacity:1;z-index:100;}
 
 /* helpers */
 
